commit all the new chnages

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <!-- home -->
     <section id="home">
         <div class="home-text">
+            <!-- <img src="images/comp.jpg"> -->
             <h1>Your Trusted Gadgets<br>
             device partner</h1>
             <p>There are many variations of passages of Lorem Ipsum<br>
@@ -91,10 +92,10 @@
   <section>
     <div class="games-row">
         <div class="games-left-col">
-            <img src="images/games2.jpg" alt="games">
+            <img src="images/g1.jpeg" alt="games">
         </div>
         <div class="games-right-col">
-          <img src="images/games.jpg" alt="games">
+          <img src="images/drone.jpeg" alt="games">
         </div>
       </div>
   </section>
