added the image

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </div>
     </div>
       <div class="testimonials-right-col">
-        <img src="images/testimonial.jpg">
+        <img src="images/g11-removebg-preview.png">
       </div>
     </div>
   </section>
